<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PersoSim App</string>
    <string name="product_name">PersoSim</string>
    
    <string name="service_name_cardservice">PersoSim NFC Service</string>
    <string name="card_name">PersoSim Card</string>
    
    <string name="main_out_text">Welcome to PersoSim App!</string>
    <string name="main_in_text">Enter commands here</string>
    <string name="main_button_enter">Enter</string>
    
    <string name="menu_item_clear_text">Clear log</string>
    <string name="menu_item_personalization_text">Set Personalization</string>
    <string name="menu_item_about_text">Show About</string>
    <string name="menu_item_config_text">Set configuration</string>
    
    <string name="dialog_personalization_heading">Select personalization from</string>
    <string name="dialog_personalization_label_predefined">predefined:</string>
    <string name="dialog_personalization_label_custom">custom:</string>
    <string name="dialog_personalization_button_browse">Browse</string>
    <string name="dialog_personalization_path_hint">enter path here</string>
    <string name="dialog_personalization_button_ok">OK</string>
    <string name="dialog_personalization_button_cancel">Cancel</string>
    
    <string name="dialog_config_heading">Configure Log level</string>
    <string name="dialog_config_button_ok">OK</string>
    <string name="dialog_config_button_cancel">Cancel</string>
    
    <string name="dialog_about_advertisement">visit us at\nhttp://www.persosim.de</string>
    <string name="dialog_about_button_ok">OK</string>
    <string name="dialog_about_button_cancel">Cancel</string>
    
    <string-array name="std_personalizations">
        <item>custom</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>GT</item>
    </string-array>
    
    <string-array name="planets_array">
        <item>verbose</item>
        <item>debug</item>
        <item>info</item>
        <item>warn</item>
        <item>error</item>
        <item>assert</item>
    </string-array>

</resources>
