<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    
        <ImageView
        android:id="@+id/dialog_about_imageview_logo_id"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/persosim" />

    <TextView
        android:id="@+id/aboutDialogTextViewLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/product_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/aboutDialogTextViewMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_about_advertisement"
        android:layout_below="@+id/linearLayout"
        android:autoLink="web"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/aboutDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutDialogTextViewMedium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onButtonClick"
        android:text="@string/dialog_about_button_ok" />
    
</RelativeLayout>