<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_config"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/lbl_cfg_catchall"
        android:text="@string/dialog_config_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    
    <LinearLayout
    android:id="@+id/fragment_ll1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop = "25dp"
    android:orientation="horizontal" >
    
    </LinearLayout>
    
    
    
    <LinearLayout
    android:id="@+id/fragment_ll2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop = "25dp"
    android:orientation="horizontal" >
    
    </LinearLayout>

    <Spinner
        android:id="@+id/planets_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
    android:id="@+id/fragment_ll3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop = "25dp"
    android:orientation="horizontal" >
    
    <Button
        android:id="@+id/buttonConfigOk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onButtonAboutDialogClick"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/dialog_config_button_ok" />
    
    <Button
        android:id="@+id/buttonConfigCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onButtonAboutDialogClick"
        android:layout_weight="1"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/dialog_config_button_cancel" />
    
    </LinearLayout>
    
</LinearLayout>